--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+blas-src = { version = "0.9.0", features = ["openblas"] }
 lapack = "0.19.0"
-openblas-src = { git = "https://github.com/blas-lapack-rs/openblas-src" }
